# quantelos-trading-bot

./: .gitignore  README.md  requirements.txt  start_services.sh  stop_services.sh  update_kaggle_url.py  update_url.py
config/: settings.toml.template
cpp_engine/: CMakeLists.txt
cpp_engine/include/: risk_gatekeeper.hpp  zmq_subscriber.hpp
cpp_engine/src/: main.cpp
cpp_engine/tests/: tdd_suite.cpp
database/: schema.sql
kaggle/: inference_notebook.py
python_node/: __init__.py  backtester.py  dashboard.py  dashboard_template.html  db_manager.py  kaggle_bridge.py  main.py  news_scraper.py  notifier.py  oanda_client.py  react_post_mortem.py  technical_analyzer.py  vector_memory.py  weekend_trainer.py  zmq_publisher.py
python_node/strategies/: __init__.py  base_strategy.py  mtf_scalper.py  quantitative_sniper.py
scratch/: analyze_losses.py  apply_fixes.py  check_oanda_account.py  check_oanda_open.py  check_trend.py  compare_oanda_vs_db.py  get_transaction_range.py  get_transactions.py  kaggle_bridge_reconstructed.py  kaggle_bridge_recovered.py  patch.py  playback_diffs.py  read_db.py  rebuild_trade_history.py  recover.py  repair_database.py  test_agent_detector.py  test_deepseek_connection.py  test_find_closed.py  test_limitless_adaptation.py  test_react_agent.py  test_strategy_decoupling.py  test_trade_details.py
scripts/: remote_asus_start.sh  remote_asus_status.sh  remote_asus_stop.sh  setup_asus.sh  update_kaggle_url.sh
tests/: test_handshake.py  test_kaggle_bridge.py  test_scalping_strategy.py
